tests/typechecking/invalid/function3.ml
let rec f a b c = a + b - true in 3